# file-tinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  assessment  proposal  proposal_ai_mode  proposal_creative_vision  proposal_file_system_tracking
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt  FileTinder  Makefile  cmake_install.cmake
_codeql_build_dir/.qt/: QtDeploySupport.cmake
app/include/: AdvancedFileTinderDialog.hpp  AiFileTinderDialog.hpp  AppLogger.hpp  DatabaseManager.hpp  DiagnosticTool.hpp  DuplicateDetectionWindow.hpp  FileListWindow.hpp  FileTinderExecutor.hpp  FilterWidget.hpp  FolderNodeWidget.hpp  FolderTreeModel.hpp  ImagePreviewWindow.hpp  MindMapView.hpp  StandaloneFileTinderDialog.hpp  ui_constants.hpp
app/lib/: AdvancedFileTinderDialog.cpp  AiFileTinderDialog.cpp  AppLogger.cpp  DatabaseManager.cpp  DiagnosticTool.cpp  DuplicateDetectionWindow.cpp  FileListWindow.cpp  FileTinderExecutor.cpp  FilterWidget.cpp  FolderNodeWidget.cpp  FolderTreeModel.cpp  ImagePreviewWindow.cpp  MindMapView.cpp  StandaloneFileTinderDialog.cpp  main.cpp
app/resources/: resources.qrc
